# MaceAndroid

./: .gitignore  CMakeLists.txt  README.md  local.properties  settings.gradle
.google/: packaging.yaml
android_app/: .gitignore  CMakeLists.txt  README.md  build.gradle
android_app/src/main/: AndroidManifest.xml
android_app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  Engine.cpp  Engine.h  TeapotRenderer.cpp  TeapotRenderer.h  TexturedTeapotRenderer.cpp  TexturedTeapotRenderer.h
android_app/src/main/java/dev/bdon/helper/: NDKHelper.java
android_app/src/main/java/dev/bdon/spacegame/: SpacegameActivity.java
android_app/src/main/res/values/: strings.xml
android_engine/src/: AndroidEngine.cpp  AndroidEngine.h  AndroidLog.cpp  CMakeLists.txt  Engine.h  GLContext.cpp  GLContext.h  GestureDetector.cpp  GestureDetector.h  Interpolator.h  JNIHelper.cpp  JNIHelper.h  NDKHelper.h  Shader.cpp  TapCamera.h  TeapotRenderer.cpp  hello.cpp  vecmath.cpp  vecmath.h
android_engine/src/cpp/: CMakeLists.txt
android_engine/src/cpp/mace/ndk/: AndroidEngine.cpp  AndroidLog.cpp  Engine.cpp  Engine.h  GestureDetector.h  SensorManager.cpp
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  Engine.h
app/src/main/java/dev/bdon/helper/: NDKHelper.java
app/src/main/java/dev/bdon/spacegame/: SpacegameApplication.java
common/ndkHelperBin/Debug/arm64-v8a/: cmake_install.cmake
common/ndkHelperBin/Debug/armeabi-v7a/: cmake_install.cmake
common/ndkHelperBin/Debug/x86/: cmake_install.cmake
common/ndkHelperBin/Debug/x86_64/: cmake_install.cmake
common/ndkHelperBin/RelWithDebInfo/arm64-v8a/: cmake_install.cmake
common/ndkHelperBin/RelWithDebInfo/armeabi-v7a/: cmake_install.cmake
common/ndkHelperBin/RelWithDebInfo/x86/: cmake_install.cmake
common/ndkHelperBin/RelWithDebInfo/x86_64/: cmake_install.cmake
common/ndk_helper/: CMakeLists.txt  GLContext.cpp  GLContext.h
engine/: CMakeLists.txt
engine/src/: CMakeLists.txt  EventSystem.cpp  EventSystem.h  Log.h  MyEngine.cpp  MyEngine.h  engine.cpp
engine/src/engine/: DeviceEngine.h  EngineImpl.cpp  EngineImpl.h
engine/src/events/: Event.cpp  Event.h  EventType.h
engine/src/graphics/: GLContext.cpp  GLContext.h  Graphics.cpp  Interpolator.h  Shader.cpp  Shader.h  Texture.cpp
engine/src/mace/: CMakeLists.txt  Clock.cpp  Clock.h  EventSystem.h  MyEngine.cpp
engine/src/mace/engine/: DeviceEngine.h  EngineImpl.cpp  EngineImpl.h
engine/src/mace/events/: AppInitEvent.h  AppResumeEvent.h  EventBase.h
engine/src/mace/graphics/: GLContext.cpp  GLContext.h  Interpolator.cpp  Interpolator.h  Shader.cpp  Shader.h  Texture.cpp
engine/src/mace/math/: vecmath.h
engine/src/mace/rendering/: TapCamera.cpp  TapCamera.h  TeapotRenderer.cpp  TeapotRenderer.h  TexturedTeapotRenderer.cpp  TexturedTeapotRenderer.h
engine/src/rendering/: TapCamera.h  TeapotRenderer.cpp  TeapotRenderer.h  TexturedTeapotRenderer.h
game/: CMakeLists.txt
game/src/: CMakeLists.txt  hello.cpp
mace/: CMakeLists.txt
mace/core/include/: Core.h  Log.h
mace/core/include/engine/: EngineImpl.h
mace/core/include/graphics/: Egl.h  GLContext.h  Graphics.h  Shader.h  Texture.h
mace/core/include/math/: vecmath.h
mace/core/include/rendering/: TapCamera.h  TeapotRenderer.h  TexturedTeapotRenderer.h
mace/core/pinclude/: Bridge.h  DeviceEngine.h  PlatformEngine.h
mace/core/src/: Core.cpp  EngineImpl.cpp  GLContext.cpp  Graphics.cpp  Interpolator.cpp  MyEngine.cpp  Shader.cpp  TapCamera.cpp  TeapotRenderer.cpp  Texture.cpp  TexturedTeapotRenderer.cpp  vecmath.cpp
mace/ndk/cpp/: AndroidEngine.cpp  AndroidLog.cpp  Bridge.cpp  Engine.cpp
mace/ndk/include/: Engine.h  NDKHelper.h  SensorManager.h
mace/ndk/src/: AndroidEngine.cpp  AndroidLog.cpp  AssetUtil.cpp  Egl.cpp  GestureDetector.cpp  GestureDetector.h  JNIHelper.cpp  JNIHelper.h  OriginalEngine.cpp  OriginalEngine.h  SensorManager.cpp  SensorManager.h  android_debug.h
